Fix homepage on mobile Fix fixed navbar

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,6 @@ html {
 }
 
 #root {
-  height: 100vh;
   display: grid;
   grid-template: 48px 1fr 48px / 1fr;
 }
